--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -15,7 +15,7 @@ body {
 }
 
 #main-container {
-  display: grid;
+  /* display: grid; */
   grid-template-columns: 1fr 2fr;
   border: 3px solid lightgray;
   border-radius: 5px;
@@ -24,7 +24,7 @@ body {
 #user-input-container {
   display: grid;
   /* grid-template-columns: 1; */
-  grid-template-rows: 1fr 3fr;
+  grid-template-columns: 1fr 1fr;
 }
 
 #entry-creator {
@@ -32,7 +32,25 @@ body {
   margin: 10px;
   font-size: 24px;
   display: grid;
-  /* grid-template-columns: 1fr 2fr; */
+  gap: 5px;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: repeat(1fr, 4);
+  grid-template-areas:
+    'label input'
+    'label input'
+    'label input'
+    'button button';
+}
+
+#entry-creator label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#create-entry-button {
+  grid-area: button;
+  cursor: pointer;
 }
 
 #user-selection {
