--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -14,10 +14,15 @@ body {
   /* background-repeat: repeat; */
 }
 
+input {
+  border-radius: 20px;
+  padding-left: 1rem;
+  font-size: 1rem;
+}
+
 #main-container {
   /* display: grid; */
   grid-template-columns: 1fr 2fr;
-  border: 3px solid lightgray;
   border-radius: 5px;
 }
 
@@ -56,11 +61,16 @@ body {
 #user-selection {
   margin: 25px;
   font-size: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #dropdown-container {
   margin: 20px;
   font-size: 20px;
+  display: grid;
+  gap: 0.3rem;
 }
 
 #dropdown-container div {
@@ -89,6 +99,7 @@ body {
   background-color: lightgrey;
   color: black;
   font-size: 24px;
+  border-radius: 15px;
 }
 
 #entry-container {
